# DailyCurrentEventsEval

./: .env.example  .gitignore  README.md  config.py  eval.py  pyproject.toml  run_daily.sh
.claude/commands/: run-eval.md
